--- a/my-database-frontend/public/index.html
+++ b/my-database-frontend/public/index.html
@@ -10,87 +10,55 @@
 </head>
 <body>
     <h1>My Database Items</h1>
-    <div id="items">Loading...</div>
+    <div id="item1">Loading...</div>
 
+    <h1>My Database Items</h1>
+    <div id="item2">Loading...</div>
+
+    <h1>My Database Items</h1>
+    <div id="item3">Loading...</div>
     <script>
         // Fetch data from your API
         fetch('/.netlify/functions/get-members')
             .then(response => response.json())
             .then(data => {
-                const container = document.getElementById('items');
+                const container = document.getElementById('item1');
                 container.innerHTML = data.map(item =>
                     `<div class="item">${JSON.stringify(item)}</div>`
                 ).join('');
             })
             .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('items').innerHTML =
+                document.getElementById('item1').innerHTML =
                     'Error loading data';
             });
-    </script>
-</body>
-</html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Database Frontend</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .item { border: 1px solid #ddd; padding: 10px; margin: 10px 0; }
-    </style>
-</head>
-<body>
-    <h1>My Database Items</h1>
-    <div id="items">Loading...</div>
 
-    <script>
-        // Fetch data from your API
         fetch('/.netlify/functions/get-events')
             .then(response => response.json())
             .then(data => {
-                const container = document.getElementById('items');
+                const container = document.getElementById('item2');
                 container.innerHTML = data.map(item =>
                     `<div class="item">${JSON.stringify(item)}</div>`
                 ).join('');
             })
             .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('items').innerHTML =
+                document.getElementById('item2').innerHTML =
                     'Error loading data';
             });
-    </script>
-</body>
-</html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Database Frontend</title>
-    <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        .item { border: 1px solid #ddd; padding: 10px; margin: 10px 0; }
-    </style>
-</head>
-<body>
-    <h1>My Database Items</h1>
-    <div id="items">Loading...</div>
-
-    <script>
-        // Fetch data from your API
         fetch('/.netlify/functions/get-EventRegistrations')
             .then(response => response.json())
             .then(data => {
-                const container = document.getElementById('items');
+                const container = document.getElementById('item3');
                 container.innerHTML = data.map(item =>
                     `<div class="item">${JSON.stringify(item)}</div>`
                 ).join('');
             })
             .catch(error => {
                 console.error('Error:', error);
-                document.getElementById('items').innerHTML =
+                document.getElementById('item3').innerHTML =
                     'Error loading data';
             });
     </script>
